bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: not found: value or
  if (weekday==false) or (vacation==true) {
                      ^